# Score_predictor

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
API core/: PredictAPI.py  main.py  predictor.py
DataManager/: DataManager.py  DataModels.py  api_models.py  sql_scripts.txt
ML Core/: CompareModels.py  CompareModels_v2.py  RF_trainer.py  ThresholdRFClassifier.py  random_forest_v2.py  random_forest_v3.py
Utils/: bacground_worker.py  background_daily_bets_worker.py  background_score_predictor.py  utils.py
ludobot/: bot.py  create_bot.py  handlers.py
ludobot/app/: handlers.py  logic_for_channel.py
src/score_predictor/: __init__.py  bootstrap.py  config.py
src/score_predictor/prediction_core/: __init__.py  features_form.py  features_glicko.py  model_io.py  schemas.py  service.py
